<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.badguy.sshnt.ThirdActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:text="@string/title_third"
        android:textStyle="normal|bold"
        android:textSize="36sp" />

    <TextView
        android:text="@string/sub_title_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/out2"
        android:layout_below="@+id/copyall"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go"
        android:text="@string/button_third"
        android:layout_below="@+id/login"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/copy_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copyall"
        android:layout_alignBaseline="@+id/go"
        android:layout_alignBottom="@+id/go"
        android:layout_toStartOf="@+id/go" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:id="@+id/login"
        android:hint="@string/input_login"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="SSHNT-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/login"
        android:layout_toStartOf="@+id/login"
        android:textSize="30sp" />

</RelativeLayout>
